--- a/index.html
+++ b/index.html
@@ -80,24 +80,26 @@
   <div class="seccion">
     <h2>📘 Controles CIS v8</h2>
     <ul>
-      <li><a href="controles-cis/control-1/">Control 01 – Inventario de Activos Empresariales</a></li>">
-      <li><a href="controles/control-02-inventario-activos-software.md">Control 02 – Inventario de Activos de Software</a></li>
-      <li><a href="controles/control-03-proteccion-datos.md">Control 03 – Protección de Datos</a></li>
-      <li><a href="controles/control-04-configuracion-segura-activos-software.md">Control 04 – Configuración Segura de Activos y Software</a </li>
-      <li><a href="controles/control-05-gestion-cuentas.md">Control 05 – Gestión de Cuentas</a></li>
-      <li><a href="controles/control-06-gestion-control-acceso.md">Control 06 – Gestión del Control de Acceso</a></li>
-      <li><a href="controles/control-07-gestion-vulnerabilidades.md">Control 07 – Gestión Continua de Vulnerabilidades</a></li>
-      <li><a href="controles/control-08-gestion-registros-auditoria.md">Control 08 – Gestión de Registros de Auditoría</a></li>
-      <li><a href="controles/control-09-proteccion-correo-navegador.md">Control 09 – Protección del Correo y Navegador Web</a></li>
-      <li><a href="controles/control-10-defensas-malware.md">Control 10 – Defensas contra Malware</a></li>
-      <li><a href="controles/control-11-recuperacion-datos.md">Control 11 – Recuperación de Datos</a></li>
-      <li><a href="controles/control-12-gestion-infraestructura-red.md">Control 12 – Gestión de la Infraestructura de Red</a></li>
-      <li><a href="controles/control-13-formacion-concienciacion-seguridad.md">Control 13 – Formación y Concienciación en Seguridad</a></li>
-      <li><a href="controles/control-14-gestion-proveedores-servicios.md">Control 14 – Gestión de Proveedores de Servicios</a></li>
-      <li><a href="controles/control-15-respuesta-incidentes.md">Control 15 – Gestión de Respuesta a Incidentes</a></li>
-      <li><a href="controles/control-16-seguridad-software-aplicacion.md">Control 16 – Seguridad en el Software de Aplicación</a></li>
-      <li><a href="controles/control-17-pruebas-penetracion.md">Control 17 – Pruebas de Penetración</a></li>
-      <li><a href="controles/control-18-gestion-seguridad.md">Control 18 – Controles de Gestión de Seguridad</a></li>
+      <ul>
+  <li><a href="controles-cis/control-1/">Control 01 – Inventario de Activos Empresariales</a></li>
+  <li><a href="controles-cis/control-2/">Control 02 – Inventario de Software Autorizado</a></li>
+  <li><a href="controles-cis/control-3/">Control 03 – Gestión de Vulnerabilidades</a></li>
+  <li><a href="controles-cis/control-4/">Control 04 – Uso Controlado de Derechos Administrativos</a></li>
+  <li><a href="controles-cis/control-5/">Control 05 – Configuración Segura de Hardware y Software</a></li>
+  <li><a href="controles-cis/control-6/">Control 06 – Mantenimiento y Análisis de Registros de Auditoría</a></li>
+  <li><a href="controles-cis/control-7/">Control 07 – Correo Electrónico y Navegación Segura</a></li>
+  <li><a href="controles-cis/control-8/">Control 08 – Protección contra Malware</a></li>
+  <li><a href="controles-cis/control-9/">Control 09 – Limitación y Control de Puertos, Protocolos y Servicios</a></li>
+  <li><a href="controles-cis/control-10/">Control 10 – Copias de Seguridad</a></li>
+  <li><a href="controles-cis/control-11/">Control 11 – Defensa contra Ingeniería Social</a></li>
+  <li><a href="controles-cis/control-12/">Control 12 – Defensa contra Ataques a Aplicaciones</a></li>
+  <li><a href="controles-cis/control-13/">Control 13 – Seguridad en Acceso a Datos</a></li>
+  <li><a href="controles-cis/control-14/">Control 14 – Seguridad en la Red</a></li>
+  <li><a href="controles-cis/control-15/">Control 15 – Control de Acceso</a></li>
+  <li><a href="controles-cis/control-16/">Control 16 – Concienciación y Formación</a></li>
+  <li><a href="controles-cis/control-17/">Control 17 – Respuesta ante Incidentes</a></li>
+  <li><a href="controles-cis/control-18/">Control 18 – Pruebas de Seguridad y Mejora Continua</a></li>
+</ul>
     </ul>
   </div>
 
