--- a/controles-cis/control-1/index.html
+++ b/controles-cis/control-1/index.html
@@ -40,6 +40,51 @@
       padding-top: 1em;
     }
   </style>
+  <style>
+  body {
+    background-color: #121212;
+    color: #e0e0e0;
+    font-family: 'Segoe UI', sans-serif;
+    line-height: 1.6;
+    padding: 2rem;
+  }
+
+  a {
+    color: #80cbc4;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  header, footer {
+    background-color: #1e1e1e;
+    padding: 1rem;
+    border-radius: 8px;
+    margin-bottom: 2rem;
+  }
+
+  nav a {
+    margin-right: 1rem;
+  }
+
+  section {
+    margin-bottom: 2rem;
+  }
+
+  h1, h2 {
+    color: #ffffff;
+  }
+
+  ul {
+    padding-left: 1.5rem;
+  }
+
+  li {
+    margin-bottom: 0.5rem;
+  }
+</style>
 </head>
 <body>
   <h1 id="-control-1-inventario-y-control-de-activos-de-la-empresa"> Control 1: Inventario y Control de Activos Empresariales</h1>
