--- a/index.html
+++ b/index.html
@@ -1,254 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-  <title>El Pergamino Digital</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f4;
-      color: #2c3e50;
-      max-width: 800px;
-      margin: auto;
-      padding: 2em;
-    }
-    h1 {
-      color: #34495e;
-=======
-  <title>El Pergamino Digital – Índice de Controles</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      max-width: 900px;
-      margin: auto;
-      padding: 2em;
-    }
-    h1, h2 {
-      color: #2c3e50;
->>>>>>> 6e5bbb8487dd9200b87d2c7a23b347934e40ecbe
-    }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    li {
-<<<<<<< HEAD
-      margin: 0.5em 0;
-    }
-    a {
-      color: #007acc;
-      text-decoration: none;
-=======
-      margin-bottom: 0.5em;
-    }
-    a {
-      text-decoration: none;
-      color: #007acc;
->>>>>>> 6e5bbb8487dd9200b87d2c7a23b347934e40ecbe
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-<<<<<<< HEAD
-    <style>
-  body {
-    background-color: #121212;
-    color: #e0e0e0;
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 18px;
-    line-height: 1.6;
-    margin: 0;
-    padding: 1rem;
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  header, footer {
-    background-color: #1e1e1e;
-    padding: 1rem;
-    border-radius: 8px;
-    margin-bottom: 2rem;
-  }
+    <!-- SEO -->
+    <meta name="description" content="El Pergamino Digital — Archivo doctrinal y pedagógico de ciberseguridad. Controles CIS, glosario aforístico, simulador técnico y laboratorios.">
+    <meta name="theme-color" content="#0d0d0d">
 
-  h1, h2 {
-    color: #ffffff;
-    font-weight: 600;
-  }
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
-  nav {
-    margin-top: 0.5rem;
-  }
+    <!-- Seguridad -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self'; script-src 'self';">
 
-  nav a {
-    color: #80cbc4;
-    margin-right: 1rem;
-    text-decoration: none;
-  }
+    <!-- Tipografía -->
+    <link rel="preload" href="/assets/fonts/inter.woff2" as="font" type="font/woff2" crossorigin>
 
-  nav a:hover {
-    text-decoration: underline;
-  }
+    <!-- CSS externo -->
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-  section {
-    margin-bottom: 2rem;
-  }
-
-  ul {
-    padding-left: 1.5rem;
-  }
-
-  li {
-    margin-bottom: 0.5rem;
-  }
-
-  @media (max-width: 600px) {
-    body {
-      font-size: 18px;
-      padding: 1rem 0.75rem;
-    }
-
-    h1 {
-      font-size: 1.6rem;
-    }
-
-    h2 {
-      font-size: 1.3rem;
-    }
-
-    nav a {
-      display: block;
-      margin: 0.5rem 0;
-    }
-  }
-</style>
-  </style>
+    <title>El Pergamino Digital — Archivo doctrinal y pedagógico de ciberseguridad</title>
 </head>
-<body>
-  <header>
-  <h1>Control 01 – Inventario de Activos Empresariales</h1>
-  <nav>
-    <a href="../../index.html">🏠 Inicio</a>
-    <a href="../control-2/">➡️ Control 02</a>
-  </nav>
-</header>
 
-<main>
-  <section>
-    <h2>🎯 Objetivo del Control</h2>
-    <p>Establecer y mantener un inventario preciso de todos los activos empresariales que permitan una gestión eficaz de la seguridad.</p>
-  </section>
-
-  <section>
-    <h2>📘 Descripción técnica</h2>
-    <p>Este control se centra en identificar, clasificar y mantener actualizados todos los activos físicos y virtuales de la organización, incluyendo servidores, estaciones de trabajo, dispositivos móviles, IoT y servicios en la nube.</p>
-  </section>
-
-  <section>
-    <h2>🧬 Fichas doctrinales asociadas</h2>
-    <ul>
-      <li>Pregunta 01 – ¿Qué define un activo empresarial?</li>
-      <li>Pregunta 02 – Herramientas de descubrimiento de activos</li>
-      <li>Aforismo: “Lo que no se inventaría, no se puede proteger. El olvido es la primera brecha.”</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>📚 Referencias normativas</h2>
-    <ul>
-      <li>CIS Control 01</li>
-      <li>NIST SP 800-53 Rev. 5 – CM-8</li>
-      <li>ISO/IEC 27001:2022 – A.5.9</li>
-    </ul>
-  </section>
-</main>
-
-<footer>
-  <p>📜 El Pergamino Digital – Legado Doctrinal</p>
-</footer>
-  <h1>El Pergamino Digital – Índice de Controles</h1>
-  <ul>
-    <li><a href="glosario/">📘 Glosario técnico-aforístico</a></li>
-    <li><a href="simulador/">🧩 Simulador certificador</a></li>
-    <li><a href="doctrinas/">📜 Doctrinas y errores de diseño</a></li>
-    <li><a href="recursos/">🧰 Recursos y plantillas</a></li>
-  </ul>
-  <p>Repositorio doctrinal en construcción. Cada enlace conduce a un módulo replicable.</p>
-</body>
-</html>
-=======
-    .seccion {
-      margin-top: 2em;
-    }
-  </style>
-</head>
 <body>
 
-  <h1>🛡️ El Pergamino Digital</h1>
-  <p>Repositorio doctrinal basado en los <strong>CIS Controls v8</strong>, con fichas técnicas, glosario aforístico, simulador certificador y referencias normativas.</p>
+    <header>
+        <h1>El Pergamino Digital</h1>
+        <p class="subtitle">Archivo doctrinal y pedagógico de ciberseguridad</p>
+    </header>
 
-  <div class="seccion">
-    <h2>📘 Controles CIS v8</h2>
-    <ul>
-      <ul>
-  <li><a href="controles-cis/control-1/">Control 01 – Inventario de Activos Empresariales</a></li>
-  <li><a href="controles-cis/control-2/">Control 02 – Inventario de Software Autorizado</a></li>
-  <li><a href="controles-cis/control-3/">Control 03 – Gestión de Vulnerabilidades</a></li>
-  <li><a href="controles-cis/control-4/">Control 04 – Uso Controlado de Derechos Administrativos</a></li>
-  <li><a href="controles-cis/control-5/">Control 05 – Configuración Segura de Hardware y Software</a></li>
-  <li><a href="controles-cis/control-6/">Control 06 – Mantenimiento y Análisis de Registros de Auditoría</a></li>
-  <li><a href="controles-cis/control-7/">Control 07 – Correo Electrónico y Navegación Segura</a></li>
-  <li><a href="controles-cis/control-8/">Control 08 – Protección contra Malware</a></li>
-  <li><a href="controles-cis/control-9/">Control 09 – Limitación y Control de Puertos, Protocolos y Servicios</a></li>
-  <li><a href="controles-cis/control-10/">Control 10 – Copias de Seguridad</a></li>
-  <li><a href="controles-cis/control-11/">Control 11 – Defensa contra Ingeniería Social</a></li>
-  <li><a href="controles-cis/control-12/">Control 12 – Defensa contra Ataques a Aplicaciones</a></li>
-  <li><a href="controles-cis/control-13/">Control 13 – Seguridad en Acceso a Datos</a></li>
-  <li><a href="controles-cis/control-14/">Control 14 – Seguridad en la Red</a></li>
-  <li><a href="controles-cis/control-15/">Control 15 – Control de Acceso</a></li>
-  <li><a href="controles-cis/control-16/">Control 16 – Concienciación y Formación</a></li>
-  <li><a href="controles-cis/control-17/">Control 17 – Respuesta ante Incidentes</a></li>
-  <li><a href="controles-cis/control-18/">Control 18 – Pruebas de Seguridad y Mejora Continua</a></li>
-</ul>
-    </ul>
-  </div>
+    <nav aria-label="Navegación principal">
+        <ul class="main-nav">
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/controles/">Controles CIS</a></li>
+            <li><a href="/glosario/">Glosario</a></li>
+            <li><a href="/labs/">Laboratorios</a></li>
+            <li><a href="/sobre/">Sobre el proyecto</a></li>
+        </ul>
+    </nav>
 
-  <div class="seccion">
-    <h2>📚 Glosario y doctrinas</h2>
-    <ul>
-      <li><a href="glosario/glosario-tecnico-aforistico.md">Glosario técnico-aforístico</a></li>
-      <li><a href="doctrinas/aforismos-validos.md">Aforismos doctrinales validados</a></li>
-    </ul>
-  </div>
+    <main>
 
-  <div class="seccion">
-    <h2>🎓 Simulador certificador</h2>
-    <ul>
-      <li><a href="simulador/banco-preguntas.md">Banco de preguntas técnicas</a></li>
-      <li><a href="simulador/etiquetas.md">Etiquetas doctrinales</a></li>
-      <li><a href="simulador/validacion-cruzada.md">Validación cruzada con marcos normativos</a></li>
-    </ul>
-  </div>
+        <section class="intro">
+            <h2>Bienvenido al Pergamino Digital</h2>
+            <p>
+                Este archivo doctrinal reúne controles CIS, glosario aforístico, preguntas certificadoras,
+                laboratorios prácticos y contenido pedagógico diseñado para formación modular en ciberseguridad.
+            </p>
+        </section>
 
-  <div class="seccion">
-    <h2>📜 Fichas heredadas</h2>
-    <ul>
-      <li><a href="fichas-heredadas/control-15-wireless-access-control-v7.md">Control 15 (v7.1) – Wireless Access Control</a></li>
-    </ul>
-  </div>
+        <section class="controls-index">
+            <h2>Índice de Controles CIS v8</h2>
 
-  <div class="seccion">
-    <h2>🔗 Recursos normativos</h2>
-    <ul>
-      <li><a href="recursos/referencias-cis.html">Referencias oficiales CIS</a></li>
-      <li><a href="recursos/enlaces-normativos.md">Enlaces a marcos normativos (NIST, ISO, OWASP…)</a></li>
-    </ul>
-  </div>
+            <div class="controls-grid">
+                <a href="/controles/01/">Control 01 — Inventario de Activos</a>
+                <a href="/controles/02/">Control 02 — Inventario de Software</a>
+                <a href="/controles/03/">Control 03 — Gestión de Datos</a>
+                <a href="/controles/04/">Control 04 — Configuración Segura</a>
+                <a href="/controles/05/">Control 05 — Gestión de Cuentas</a>
+                <a href="/controles/06/">Control 06 — Control de Acceso</a>
+                <a href="/controles/07/">Control 07 — Protección de Email</a>
+                <a href="/controles/08/">Control 08 — Gestión de Malware</a>
+                <a href="/controles/09/">Control 09 — Navegadores y Email</a>
+                <a href="/controles/10/">Control 10 — Recuperación de Datos</a>
+                <a href="/controles/11/">Control 11 — Configuración de Red</a>
+                <a href="/controles/12/">Control 12 — Infraestructura de Red</a>
+                <a href="/controles/13/">Control 13 — Monitoreo de Red</a>
+                <a href="/controles/14/">Control 14 — Capacitación</a>
+                <a href="/controles/15/">Control 15 — Proveedores</a>
+                <a href="/controles/16/">Control 16 — Seguridad de Software</a>
+                <a href="/controles/17/">Control 17 — Respuesta a Incidentes</a>
+                <a href="/controles/18/">Control 18 — Pruebas de Penetración</a>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <p class="footer-text">
+            Esto forma parte de <strong>El Pergamino Digital — Archivo doctrinal y pedagógico de ciberseguridad.</strong>
+        </p>
+
+        <nav aria-label="Navegación inferior" class="footer-nav">
+            <a href="/accesibilidad/">Accesibilidad</a>
+            <a href="/privacidad/">Privacidad</a>
+            <a href="/licencia/">Licencia</a>
+            <a href="/github/" rel="noopener noreferrer">Repositorio</a>
+        </nav>
+
+        <button id="back-to-top" aria-label="Volver arriba">↑</button>
+    </footer>
+
+    <!-- JS externo -->
+    <script src="/assets/js/main.js" defer></script>
 
 </body>
 </html>
->>>>>>> 6e5bbb8487dd9200b87d2c7a23b347934e40ecbe
+
