--- a/index.html
+++ b/index.html
@@ -4,32 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>El Pergamino Digital — Archivo doctrinal y pedagógico de ciberseguridad</title>
+    <title>Controles CIS v8 — El Pergamino Digital</title>
 
-    <!-- SEO -->
-    <meta name="description" content="El Pergamino Digital — Archivo doctrinal y pedagógico de ciberseguridad. Controles CIS, glosario aforístico, simulador técnico y laboratorios.">
+    <meta name="description" content="Índice de Controles CIS v8 del Pergamino Digital.">
 
-    <!-- PWA -->
-    <link rel="manifest" href="/el-pergamino-digital/manifest.json">
-    <meta name="theme-color" content="#0d0d0d">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <!-- Seguridad -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Tipografía (opcional si no existe la fuente aún) -->
-    <!-- <link rel="preload" href="/el-pergamino-digital/assets/fonts/inter.woff2" as="font" type="font/woff2" crossorigin> -->
-
-    <!-- CSS global -->
     <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css">
 </head>
 
 <body>
 
 <header class="site-header">
-    <h1>El Pergamino Digital</h1>
-    <p class="subtitle">Archivo doctrinal y pedagógico de ciberseguridad</p>
+    <h1>Controles CIS v8</h1>
+    <p class="subtitle">Inventario, defensa y arquitectura doctrinal</p>
 
     <nav aria-label="Navegación principal" class="main-nav">
         <a href="/el-pergamino-digital/">Inicio</a>
@@ -43,16 +29,14 @@
 <main class="site-main">
 
     <section class="intro">
-        <h2>Bienvenido al Pergamino Digital</h2>
+        <h2>Índice de Controles CIS v8</h2>
         <p>
-            Este archivo doctrinal reúne controles CIS, glosario aforístico, preguntas certificadoras,
-            laboratorios prácticos y contenido pedagógico diseñado para formación modular en ciberseguridad.
+            Selecciona un control para acceder a su ficha doctrinal, medidas IG1/IG2/IG3,
+            notas técnicas y navegación entre controles.
         </p>
     </section>
 
     <section class="controls-index">
-        <h2>Índice de Controles CIS v8</h2>
-
         <div class="controls-grid">
             <a href="/el-pergamino-digital/controles/01/">Control 01 — Inventario de Activos</a>
             <a href="/el-pergamino-digital/controles/02/">Control 02 — Inventario de Software</a>
@@ -86,7 +70,7 @@
         <a href="/el-pergamino-digital/accesibilidad/">Accesibilidad</a>
         <a href="/el-pergamino-digital/privacidad/">Privacidad</a>
         <a href="/el-pergamino-digital/licencia/">Licencia</a>
-        <a href="https://github.com/JulioCesarAbreuP/el-pergamino-digital" target="_blank" rel="noopener noreferrer">Repositorio</a>
+        <a href="https://github.com/JulioCesarAbreuP/el-pergamino-digital" target="_blank">Repositorio</a>
     </nav>
 
     <button id="back-to-top" aria-label="Volver arriba">↑</button>
