--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <meta name="description" content="Índice de Controles CIS v8 del Pergamino Digital.">
 
-    <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
 </head>
 
 <body>
@@ -75,8 +76,8 @@
 
     <button id="back-to-top" aria-label="Volver arriba">↑</button>
 </footer>
-
-<script src="/el-pergamino-digital/assets/js/main.js" defer></script>
+    
+   <script src="/assets/js/main.js" defer></script>
 
 </body>
 </html>
