--- a/glosario/index.html
+++ b/glosario/index.html
@@ -158,5 +158,13 @@
 
     </dl>
   </section>
+  <footer>
+  <hr>
+  <p><strong>🧭 El glosario técnico-aforístico forma parte del legado doctrinal del Pergamino Digital.</strong></p>
+  <p>Última actualización: diciembre 2025 · Autoría y curaduría: Julio César Abreu · <a href="/sobre/">Sobre este proyecto</a></p>
+  <p style="font-style: italic; color: var(--accent); margin-top: 1em;">
+    “El conocimiento no se memoriza, se encarna. Cada término es una coordenada en tu mapa de dominio.”
+  </p>
+</footer>
 </body>
 </html>
