--- a/glosario/index.html
+++ b/glosario/index.html
@@ -79,7 +79,6 @@
     <h2>🔤 Navegación por inicial</h2>
     <div style="display: flex; flex-wrap: wrap; gap: 0.5em;">
       <a href="#A">A</a><a href="#C">C</a><a href="#D">D</a><a href="#F">F</a><a href="#H">H</a>
-      <a href="#I">I</a><a href="#M">M</a><a href="#N">N</a>
     </div>
   </nav>
 
@@ -135,38 +134,17 @@
         <strong>🧪 Validación cruzada:</strong> NIST FIPS 180-4, CIS Control 3.4
       </dd>
 
-      <dt id="I">Integridad</dt>
-      <dd>
-        <strong>🧬 Analogía:</strong> “Como un sello intacto en un sobre.”<br>
-        <strong>🎓 Rol/Certificación:</strong> Data Integrity Officer — Security+, IBM Cybersecurity Analyst<br>
-        <strong>🧪 Validación cruzada:</strong> CIS Control 3, NIST SI-7, ISO 27001 A.12
-      </dd>
-
-      <dt id="M">MitM (Man-in-the-Middle)</dt>
-      <dd>
-        <strong>🧬 Analogía:</strong> “Como un espía que escucha y altera una conversación telefónica.”<br>
-        <strong>🎓 Rol/Certificación:</strong> Offensive Security Analyst — PenTest+, CEH<br>
-        <strong>🧪 Validación cruzada:</strong> MITRE ATT&CK T1557, CIS Control 13
-      </dd>
-
-      <dt id="N">No repudio</dt>
-      <dd>
-        <strong>🧬 Analogía:</strong> “Como firmar un contrato con testigos.”<br>
-        <strong>🎓 Rol/Certificación:</strong> Legal Compliance Officer — CISSP, Security+<br>
-        <strong>🧪 Validación cruzada:</strong> NIST SP 800-102, ISO 27001 A.10.6
-      </dd>
-
     </dl>
   </section>
-       
-       <footer>
-  <hr>
-  <p><strong>🧭 El glosario técnico-aforístico forma parte del legado doctrinal del Pergamino Digital.</strong></p>
-  <p>Última actualización: diciembre 2025 · Autoría y curaduría: Julio César Abreu · <a href="/sobre/">Sobre este proyecto</a></p>
-  <p style="font-style: italic; color: var(--accent); margin-top: 1em;">
-    “El conocimiento no se memoriza, se encarna. Cada término es una coordenada en tu mapa de dominio.”
-  </p>
-</footer>
+
+  <footer>
+    <hr>
+    <p><strong>🧭 Este glosario forma parte del legado doctrinal del Pergamino Digital.</strong></p>
+    <p>Última actualización: diciembre 2025 · <a href="/el-pergamino-digital/sobre/">Sobre este proyecto</a></p>
+    <p style="font-style: italic; color: var(--accent); margin-top: 1em;">
+      “El conocimiento no se memoriza, se encarna. Cada término es una coordenada en tu mapa de dominio.”
+    </p>
+  </footer>
 
 </body>
 </html>
