--- a/glosario/index.html
+++ b/glosario/index.html
@@ -76,11 +76,22 @@
   </header>
 
   <nav>
-    <h2>🔤 Navegación por inicial</h2>
-    <div style="display: flex; flex-wrap: wrap; gap: 0.5em;">
-      <a href="#A">A</a><a href="#C">C</a><a href="#D">D</a><a href="#F">F</a><a href="#H">H</a>
-    </div>
-  </nav>
+  <h2>🔤 Navegación por inicial</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 0.5em;">
+    <a href="#A">A</a>
+    <a href="#C">C</a>
+    <a href="#D">D</a>
+    <a href="#F">F</a>
+    <a href="#H">H</a>
+    <a href="#I">I</a>
+    <a href="#M">M</a>
+    <a href="#N">N</a>
+    <a href="#P">P</a>
+    <a href="#R">R</a>
+    <a href="#S">S</a>
+    <a href="#Z">Z</a>
+  </div>
+</nav>
 
   <section>
     <dl>
@@ -133,6 +144,41 @@
         <strong>🎓 Rol/Certificación:</strong> Digital Forensics Analyst — Security+, CISSP<br>
         <strong>🧪 Validación cruzada:</strong> NIST FIPS 180-4, CIS Control 3.4
       </dd>
+
+      <dt id="P">Phishing</dt>
+<dd>
+  <strong>🧬 Analogía:</strong> “Como un anzuelo disfrazado de premio.”<br>
+  <strong>🎓 Rol/Certificación:</strong> Awareness Trainer — Security+, IBM SkillsBuild<br>
+  <strong>🧪 Validación cruzada:</strong> MITRE ATT&CK T1566, CIS Control 14, ISO 27001 A.7.2.2
+</dd>
+
+<dt id="R">Ransomware</dt>
+<dd>
+  <strong>🧬 Analogía:</strong> “Como un candado que solo se abre pagando al secuestrador.”<br>
+  <strong>🎓 Rol/Certificación:</strong> Incident Responder — CySA+, IBM Cybersecurity Analyst<br>
+  <strong>🧪 Validación cruzada:</strong> MITRE ATT&CK T1486, CIS Control 10, NIST IR-4
+</dd>
+
+<dt id="S">SIEM</dt>
+<dd>
+  <strong>🧬 Analogía:</strong> “Como un director de orquesta que escucha todos los instrumentos de seguridad.”<br>
+  <strong>🎓 Rol/Certificación:</strong> SOC Analyst — IBM QRadar, Security+, CySA+<br>
+  <strong>🧪 Validación cruzada:</strong> CIS Control 8, NIST AU-6, ISO 27001 A.12.4.1
+</dd>
+
+<dt>Sniffing</dt>
+<dd>
+  <strong>🧬 Analogía:</strong> “Como escuchar conversaciones ajenas con un micrófono oculto.”<br>
+  <strong>🎓 Rol/Certificación:</strong> Penetration Tester — PenTest+, CEH<br>
+  <strong>🧪 Validación cruzada:</strong> MITRE ATT&CK T1040, CIS Control 13, OWASP WSTG-INPV-01
+</dd>
+
+<dt id="Z">Zero Trust</dt>
+<dd>
+  <strong>🧬 Analogía:</strong> “Como un castillo sin puente levadizo: nadie entra sin demostrar quién es.”<br>
+  <strong>🎓 Rol/Certificación:</strong> Zero Trust Architect — CCSK, Security+, IBM SkillsBuild<br>
+  <strong>🧪 Validación cruzada:</strong> NIST SP 800-207, CIS IG1/IG2, CSA Zero Trust Guidance
+</dd>
 
     </dl>
   </section>
