--- a/glosario/index.html
+++ b/glosario/index.html
@@ -76,6 +76,36 @@
   </header>
 
   <nav>
+
+    <section>
+  <h2>🧭 Navegación temática</h2>
+  <ul>
+    <li><strong>🔐 Fundamentos:</strong>
+      <a href="#A">Autenticación</a>,
+      <a href="#C">Confidencialidad</a>,
+      <a href="#I">Integridad</a>,
+      <a href="#D">Disponibilidad</a>,
+      <a href="#H">Hash</a>,
+      <a href="#N">No repudio</a>
+    </li>
+    <li><strong>🎯 Ataques:</strong>
+      <a href="#P">Phishing</a>,
+      <a href="#R">Ransomware</a>,
+      <a href="#M">MitM</a>,
+      <a href="#S">Sniffing</a>
+    </li>
+    <li><strong>🛡️ Controles:</strong>
+      <a href="#F">Firewall</a>,
+      <a href="#S">SIEM</a>,
+      <a href="#C">Control de acceso</a>,
+      <a href="#Z">Zero Trust</a>
+    </li>
+    <li><strong>📚 Marcos y principios:</strong>
+      <a href="#Z">Zero Trust</a>,
+      <a href="#C">Criptografía</a>
+    </li>
+  </ul>
+</section>
   <h2>🔤 Navegación por inicial</h2>
   <div style="display: flex; flex-wrap: wrap; gap: 0.5em;">
     <a href="#A">A</a>
