--- a/glosario/index.html
+++ b/glosario/index.html
@@ -219,11 +219,11 @@
   <hr>
   <p><strong>🧭 Este glosario forma parte del legado doctrinal del Pergamino Digital.</strong></p>
   <p>Última actualización: diciembre 2025 · <a href="/el-pergamino-digital/sobre/">Sobre este proyecto</a></p>
-  <p style="font-style: italic; color: var(--accent); margin-top: 1em;">
+  <p style="font-style: italic; color: #004466; margin-top: 1em;">
     “El conocimiento no se memoriza, se encarna. Cada término es una coordenada en tu mapa de dominio.”
   </p>
   <p style="margin-top: 2em;">
-    <a href="/el-pergamino-digital/" style="text-decoration: none; background: var(--accent); color: var(--bg); padding: 0.5em 1em; border-radius: 4px;">
+    <a href="/el-pergamino-digital/" style="display: inline-block; text-decoration: none; background-color: #004466; color: #ffffff; padding: 0.6em 1.2em; border-radius: 5px; font-weight: bold;">
       ← Volver al índice general
     </a>
   </p>
