--- a/labs/index.html
+++ b/labs/index.html
@@ -107,7 +107,11 @@
         <li>Aplicar filtro <code>http.request</code> o <code>ftp</code> para buscar credenciales en texto plano.</li>
         <li>Identificar IPs, puertos, protocolos y posibles vectores de ataque.</li>
       </ol>
-
+<ul>
+  <li>MITRE ATT&CK: <code>T1040 – Network Sniffing</code> (ruta futura: <code>/mitre/t1040/</code>)</li>
+  <li>CIS Control 13.1 – Monitorización del tráfico de red (ruta futura: <code>/controles/cis/13/</code>)</li>
+  <li>OWASP WSTG-INPV-01 – Validación de entrada (ruta futura: <code>/owasp/wstg-inpv-01/</code>)</li>
+</ul>
       <p><strong>🧪 Validación cruzada:</strong></p>
       <ul>
         <li>MITRE ATT&CK: <code>T1040 – Network Sniffing</code></li>
