--- a/labs/index.html
+++ b/labs/index.html
@@ -114,9 +114,9 @@
 </ul>
       <p><strong>🧪 Validación cruzada:</strong></p>
       <ul>
-        <li>MITRE ATT&CK: <code>T1040 – Network Sniffing</code></li>
-        <li>CIS Control 13.1 – Monitorización del tráfico de red</li>
-        <li>OWASP WSTG-INPV-01 – Validación de entrada en protocolos inseguros</li>
+        <li><a href="/el-pergamino-digital/controles/cis/13/">CIS Control 13.1 – Monitorización del tráfico de red</a></li>
+        <li><a href="/el-pergamino-digital/mitre/t1040/">MITRE ATT&CK: T1040 – Network Sniffing</a></li>
+        <li><a href="/el-pergamino-digital/owasp/wstg-inpv-01/">OWASP WSTG-INPV-01 – Validación de entrada en protocolos inseguros</a></li>
       </ul>
 
       <p><strong>🛡️ Contramedida:</strong> Implementar segmentación de red, cifrado TLS y detección de sniffers mediante ARP scanning.</p>
