--- a/mitre/t1040/index.html
+++ b/mitre/t1040/index.html
@@ -94,12 +94,12 @@
         <li><a href="/el-pergamino-digital/labs/">🧪 Sniffing con Wireshark y tcpdump</a></li>
       </ul>
 
-      <h3>📚 Controles relacionados</h3>
-      <ul>
-        <li><a href="/el-pergamino-digital/controles/cis/13/">CIS Control 13.1 – Monitorización del tráfico de red</a></li>
-        <li>OWASP WSTG-INPV-01 – Validación de entrada en protocolos inseguros</li>
-        <li>NIST SP 800-53: <code>SI-4</code> – System Monitoring</li>
-      </ul>
+     <h3>📚 Controles relacionados</h3>
+<ul>
+  <li><a href="/el-pergamino-digital/controles/cis/13/">CIS Control 13.1 – Monitorización del tráfico de red</a></li>
+  <li><a href="/el-pergamino-digital/owasp/wstg-inpv-01/">OWASP WSTG-INPV-01 – Validación de entrada en protocolos inseguros</a></li>
+  <li>NIST SP 800-53: <code>SI-4</code> – System Monitoring</li>
+</ul>
 
       <h3>🎓 Certificaciones asociadas</h3>
       <ul>
