--- a/owasp/wstg-inpv-01/index.html
+++ b/owasp/wstg-inpv-01/index.html
@@ -95,9 +95,12 @@
 
       <h3>📚 Controles relacionados</h3>
       <ul>
-        <li><a href="/el-pergamino-digital/controles/cis/13/">CIS Control 13.1 – Monitorización del tráfico de red</a></li>
-        <li><a href="/el-pergamino-digital/mitre/t1040/">MITRE ATT&CK: T1040 – Network Sniffing</a></li>
-        <li>NIST SP 800-53: <code>SC-12</code> – Cryptographic Key Establishment</li>
+        <h3>📚 Controles relacionados</h3>
+<ul>
+  <li><a href="/el-pergamino-digital/controles/cis/13/">CIS Control 13.1 – Monitorización del tráfico de red</a></li>
+  <li><a href="/el-pergamino-digital/mitre/t1040/">MITRE ATT&CK: T1040 – Network Sniffing</a></li>
+  <li><a href="/el-pergamino-digital/nist/sc-12/">NIST SP 800-53: SC-12 – Cryptographic Key Establishment</a></li>
+</ul>
       </ul>
 
       <h3>🎓 Certificaciones asociadas</h3>
